plugins/lombok/testData/diagnostics/kotlin/constructors.kt
import lombok.*

<!ANNOTATION_IS_NOT_SUPPORTED!>@AllArgsConstructor<!>
<!ANNOTATION_IS_NOT_SUPPORTED!>@RequiredArgsConstructor<!>
class ConstructorExample<A, B>(val a: A, val b: B, val C: String) // Make sure compiler doesn't crash on unsupported annotations
